exports[`test it display the green icon if status is "active" and grey if "inactive". 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": 65,
    }
  }>
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginRight": 20,
        "width": 15,
      }
    } />
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }>
    <span
      style={
        Object {
          "color": "#468dc8",
          "fontWeight": "bold",
        }
      } />
    <span
      style={
        Object {
          "color": "#468dc8",
        }
      } />
    <span
      style={
        Object {
          "color": "#6da94f",
        }
      } />
  </div>
</div>
`;

exports[`test it displays the given title, author and date. 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": 65,
    }
  }>
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginRight": 20,
        "width": 15,
      }
    } />
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }>
    <span
      style={
        Object {
          "color": "#468dc8",
          "fontWeight": "bold",
        }
      }>
      Test title
    </span>
    <span
      style={
        Object {
          "color": "#468dc8",
        }
      }>
      01/02/2016
    </span>
    <span
      style={
        Object {
          "color": "#6da94f",
        }
      }>
      Test author
    </span>
  </div>
</div>
`;

exports[`test it dosen't display the icon if no status is given. 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": 65,
    }
  }>
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginRight": 20,
        "width": 15,
      }
    } />
  <div
    style={
      Object {
        "WebkitJustifyContent": "space-around",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }>
    <span
      style={
        Object {
          "color": "#468dc8",
          "fontWeight": "bold",
        }
      } />
    <span
      style={
        Object {
          "color": "#468dc8",
        }
      } />
    <span
      style={
        Object {
          "color": "#6da94f",
        }
      } />
  </div>
</div>
`;
